// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledAnnotationTooltip should have correct default styles 1`] = `
<DocumentFragment>
  .c0 {
  background: rgb(216,216,216);
  min-width: 200px;
  min-height: 100px;
  border-radius: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border: solid 1px rgb(173,173,173);
  padding: 3px;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`StyledAnnotationTooltip should have correct styles when in dragging state 1`] = `
<DocumentFragment>
  .c0 {
  background: rgb(216,216,216);
  min-width: 200px;
  min-height: 100px;
  border-radius: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border: solid 1px rgb(173,173,173);
  padding: 3px;
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`StyledAnnotationTooltip should have correct styles when in edit state 1`] = `
<DocumentFragment>
  .c0 {
  background: rgb(216,216,216);
  min-width: 200px;
  min-height: 100px;
  border-radius: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border: solid 1px rgb(173,173,173);
  padding: 3px;
  cursor: initial;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
